<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding"
    android:paddingEnd="@dimen/padding"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:id="@+id/textView"
        style="@style/style_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/nickname_edit"
        style="@style/Namestyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/what_is_your_nick_name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="sans-serif-black"
        android:text="@string/done" />

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone"
        style="@style/Namestyle"/>

    <ImageView
        android:id="@+id/big_star"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/Namestyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/boldit"

            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/bio" />
    </ScrollView>

</LinearLayout>